Tweak focus state of collection dropdown

--- a/frontend/src/components/siteComponents/AppHeaderUI/style.scss
+++ b/frontend/src/components/siteComponents/AppHeaderUI/style.scss
@@ -119,6 +119,21 @@
                         &:hover {
                             background-color: $blue;
                         }
+
+                        &:focus {
+                            background-color: $white;
+                            color: $black;
+
+                            svg {
+                                path, polyline, polygon {
+                                    stroke: $black;
+                                }
+
+                                .w-letter {
+                                    fill: $black;
+                                }
+                            }
+                        }
                     }
                 }
 
