Solr work - Add cdx to solr index - Add batch ingest - updates to frontend - add solr doc ttl - trigger cdx and solr indexing at collection level

--- a/frontend/src/components/collection/TableRenderer/style.scss
+++ b/frontend/src/components/collection/TableRenderer/style.scss
@@ -40,6 +40,11 @@
                     margin-right: rem(.5rem);
                 }
             }
+
+            .big-query-warning {
+                font-style: italic;
+                color: $gray700;
+            }
         }
     }
 
